--- a/gradle/kalang.gradle
+++ b/gradle/kalang.gradle
@@ -1,36 +1,34 @@
-apply plugin:'java'
-sourceSets.main.allSource.srcDir("src/main/kalang")
 buildscript {
-  repositories {
-    mavenCentral()
-  }
-  dependencies {
-    classpath 'site.kason.kalang:kalang-compiler:1.2.4'
-  }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'site.kason.kalang:kalang-compiler:1.4.1'
+    }
 }
 
-import kalang.shell.Kalangc;
+sourceSets.main.allSource.srcDir("src/main/kalang");
+
+import kalang.compiler.shell.Kalangc;
 class kalang implements Plugin<Project> {
     void cpKalang(project){
         def klSrc = new File(project.projectDir,"src/main/kalang")
-        def outDir = new File(project.projectDir,"build/classes/java/main")
+        def outDir = new File(project.projectDir,"build/classes/kalang/main")
         //println "use src dir:" + klSrc.getAbsolutePath();
         //println "use out dir:" + outDir.getAbsolutePath();
-        if(!klSrc.exists()){
-            println("NO SOURCE");
-            return;
-        }
-        List<String> cps = new LinkedList();
-        for(f in project.configurations.compile.files){
-            cps.add(f.getAbsolutePath());
-        }
-        String cp = String.join(";",cps);
-        //println("class path:" + cp);
-        def args = ["--output-dir",outDir.getAbsolutePath(),"--classpath",cp,klSrc.getAbsolutePath()];
-        println("Args=" + args);
-        int result = new Kalangc().run(args as String[])
-        if (result!=0){
-            throw new Exception("compile failed");
+        if(klSrc.exists()){
+            List<String> cps = new LinkedList();
+            for(f in project.configurations.compile.files){
+                cps.add(f.getAbsolutePath());
+            }
+            String cp = String.join(";",cps);
+            //println("class path:" + cp);
+            def args = ["--output-dir",outDir.getAbsolutePath(),"--classpath",cp,klSrc.getAbsolutePath()];
+            //println("compile args:" + args);
+            int result = new Kalangc().run(args as String[])
+            if (result!=0){
+                throw new Exception("compile failed with exit code:${result}");
+            }
         }
     }
     void apply(Project project) {
@@ -40,6 +38,8 @@ class kalang implements Plugin<Project> {
     }
 }
 apply plugin:kalang
+compileJava.dependsOn compileKalang
 
-processResources.dependsOn compileKalang
-compileKalang.dependsOn compileJava
+jar {
+    from "$buildDir/classes/kalang/main"
+}
